care/force-app/main/default/objects/Topic_Map__mdt/Topic_Map__mdt.object-meta.xml
<CustomObject>
    <description>Allows admins to define how Article Topics map to Case Types or Live Agent Skills.</description>
    <label>Topic Map</label>
    <pluralLabel>Topic Maps</pluralLabel>
</CustomObject>