care/force-app/main/default/objects/Topic_Map__mdt/fields/Button_Id__c.field-meta.xml
<CustomField>
    <fullName>Button_Id__c</fullName>
    <inlineHelpText>The Chat Button Id.  Use only the 15 character id (because that&apos;s what the one the Live agent JavaScript uses).</inlineHelpText>
    <label>Button Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>