care/force-app/main/default/objects/Topic_Map__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <inlineHelpText>When a Case is created from an Article with this Topic, this field indicates which Case Type the Case should be created with.</inlineHelpText>
    <label>Case Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>