care/force-app/main/default/objects/Topic_Map__mdt/fields/Member_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Member_Visibility__c</fullName>
    <description>Indicates, if the Phone Details Component (Phone Number) should be visible on a Topic for a Member.</description>
    <label>Member Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>