care/force-app/main/default/objects/Topic_Map__mdt/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <inlineHelpText>The Live Agent Skill this topic should map to.</inlineHelpText>
    <label>Skill</label>
    <length>40</length>
    <type>Text</type>
</CustomField>