care/force-app/main/default/objects/Topic_Map__mdt/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <inlineHelpText>Article Topic (defined via Data Category in Article).</inlineHelpText>
    <label>Topic</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>