care/force-app/main/default/objects/Topic_Map__mdt/listViews/All_Topic_Maps.listView-meta.xml
<ListView>
    <fullName>All_Topic_Maps</fullName>
    <columns>MasterLabel</columns>
    <columns>Topic__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Skill__c</columns>
    <columns>Button_Id__c</columns>
    <columns>Member_Visibility__c</columns>
    <columns>Visitor_Visibility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Topic Maps</label>
    <language>en_US</language>
</ListView>